udpated file to send to PC

--- a/Chrisler_Assignment_2.rmd
+++ b/Chrisler_Assignment_2.rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(echo = TRUE)
 precip <- readRDS("USAAnnualPcpn1950_2008.rds")
 temp <- readRDS("USAAnnualTemp1950_2008.rds")
 ```
+
 ```{r Remove NA values}
 #p for precip and t for temperature
 p <- precip[complete.cases(precip), ]
@@ -22,14 +23,23 @@ t <- temp[complete.cases(temp), ]
 ```
 
 ```{r Aggregation}
-p_agg <- aggregate(year ~ lat+lon+name, data = p, FUN=length)
-t_agg <- aggregate(year ~ lat+lon+name, data = t, FUN=length)
-
+p_agg <- aggregate(year ~ lat+lon+name, p, FUN=length)
+t_agg <- aggregate(year ~ lat+lon+name, t, FUN=length)
 ```
 
-```{r 40 years}
+```{r Minimum amout of years}
 min = 40
 p_agg <- subset(p_agg, year >= min)
 t_agg <- subset(t_agg, year >= min)
+```
 
+```{r Data for stations left}
+p_filt <- merge(p,p_agg, by=c("lat","lon","name"))
+t_filt <- merge(t,t_agg, by=c("lat","lon","name"))
+```
+
+```{r Sort by location}
+for(i in p_filt) {
+  
+  
 ```
