--- a/Chrisler_Assignment_2.rmd
+++ b/Chrisler_Assignment_2.rmd
@@ -5,49 +5,168 @@ date: "March 5, 2018"
 output: html_document
 ---
 
+```{r, echo=FALSE}
+library(knitr)
+opts_chunk$set(echo = FALSE, cache=FALSE)
+read_chunk('acis2df.R')
+```
+
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ## R Markdown
 
-```{r readRDS provided<-TRUE}
+```{r readRDS provided<-TRUE , echo=FALSE}
+#Import precipitation and temperature data
 precip <- readRDS("USAAnnualPcpn1950_2008.rds")
 temp <- readRDS("USAAnnualTemp1950_2008.rds")
-
 ```
 
-```{r Remove NA values}
-#p for precip and t for temperature
-df.list <- list(precip,temp)
-nans <- lapply(df.list, function(x) x[complete.cases(x),])
-```
+```{r, echo=FALSE}
+library(data.table)
 
-```{r Aggregation}
-agg <- lapply(nans, function(x) aggregate(year ~ lat+lon+name, x, FUN=length))
-```
+# Use data.table package to create dataframes of each dataset
+dtp <- data.table(precip)
+dtt <- data.table(temp)
 
-```{r Minimum amout of years}
-min = 40
+# List of dataframes to use in modularized code
+df.list <- list(dtp,dtt)
+
+# Variable to located specific location that will be used in functions
 vars <- c("lat","lon","name")
-subset <- lapply(agg, function(x) subset(x, year >= min))
-filt <- lapply(subset, function(x) unique(x[vars]))
 ```
 
-```{r Data for stations left}
-vars <- c("lat","lon","name")
-p_filt <- merge(precip,filt[1], by=c(vars))
-t_filt <- merge(temp, filt[2], by=c(vars))
-sorted <- p_filt[ order(p_filt[,1],p_filt[,2], p_filt[,6]),]
+```{r, echo=FALSE}
+# Data split by specific location for both dataframes
+df <- lapply(df.list, function(x) split(x, paste(x$lat,x$lon)))
+
+# Maximum amount of NaN values for the location to have at least 40 years of data with for loop for each dataset
+max = 19
+forty_ <- vector('list', length(data))
+for(i in seq_along(df)){
+forty_[[i]] <- df[[i]][lapply(df[[i]], function(x) sum(is.na(x))) <= max]
+}
 ```
 
+```{r, echo=FALSE}
+# Linear regression function applied to locations with 40 years of data to find intercepts and slope
+fits <- vector('list', length(data))
+for(i in seq_along(forty_)){
+fits[[i]] <- lapply(forty_[[i]], function(x) {
+  lm( formula = data ~ year, data = x )
+} )
+}
+```
 
-```{r split by data points including NA values}
-years <- 59
-sorted_num <- sorted[,-3:-4]
-d <- split(sorted_num, (seq(nrow(p_filt))-1) %/% years)
-m <- as.matrix(d)
-l <- lapply(m, function(x) lm(data~year, data=x))
-slopes <- lapply(l, function(x) (x$coefficients["year"]))
+```{r, echo=FALSE}
+# Extract the slope from all models
+# Slopes_new allows lat/lon coordinates to become a row since the coordinates are in header row
+# For loop to organize in row form for cleaner end matrix
+slopes <- vector('list', length(data))
+slopes_new <- vector('list', length(data))
+latlon <- vector('list', length(data))
+for(i in seq_along(fits)){
+slopes[[i]] <- lapply(fits[[i]], function(x) x$coefficients)
+slopes_new[[i]] <- rbind(names(slopes[[i]]), slopes[[i]])
+latlon[[i]] <- transpose(data.frame(do.call('rbind', strsplit(as.character(slopes_new[[i]]),' ',fixed=TRUE))))
+}
+```
+
+```{r, echo=FALSE}
+# Final cleaning of dataframes with removal of intercepts while retaining slopes and separated for each variable
+data_p <- latlon[[1]]
+latlon_p <- data_p[seq(1,length(data_p),2)]
+data_p <- data_p[seq(2,length(data_p),2)]
+names(data_p) <- names(latlon_p)
+#identical(names(data_p),names(latlon_p))
+data_pf <- rbind(latlon_p, data_p)
+data_pf <- data_pf[-3,]
+
+data_t <- latlon[[2]]
+latlon_t <- data_t[seq(1,length(data_t),2)]
+data_t <- data_t[seq(2,length(data_t),2)]
+names(data_t) <- names(latlon_t)
+#identical(names(data_t),names(latlon_t))
+data_tf <- rbind(latlon_t, data_t)
+data_tf <- data_tf[-3,]
 
 ```
+
+```{r, echo=FALSE}
+# Write matricies to a csv file to import to Python for mapping
+write.csv(data_pf, file = "Precipitation.csv")
+write.csv(data_tf, file = "Temperatures.csv")
+```
+
+```{python, echo=FALSE}
+# Example Python code for the precipitaiton map to display method for each individual map
+# R version 3.4.2 does not support following imports so Python codes will be in folder
+#
+# -*- coding: utf-8 -*-
+#"""
+#Created on Tue Mar 13 15:51:37 2018
+#
+#@author: b934c867
+#"""
+#Import packages
+#import matplotlib.pyplot as plt
+#from mpl_toolkits.basemap import Basemap
+#import pandas
+#
+# Import dataframe using pandas and remove first column of indices
+# Assign variables to proper names as lists "floats"
+#df = pandas.read_csv('./Precipitation.csv')
+#df = df[df.columns.difference(['Unnamed: 0'])]
+#df = df.transpose()
+#lon = df[1].apply(float)
+#lat = df[0].apply(float)
+#precip = df[2]
+#df[2] = df[2].apply(str).str.replace('\(|\)','')
+#precip = precip.tolist()
+#
+# 1. Draw the map background
+#pdat = precip
+#
+#buff = 0.5 #Edge buffer (degrees)
+#xmn = lon.min() - buff # Create left boundary
+#xmx = lon.max() + buff # Create right boundary
+#ymn = lat.min() - buff # Create bottom boundary
+#ymx = lat.max() + buff # Create top boundary
+#
+#w = 8.5 #width of figure [inches]
+#h = 11 #height of figure [inches]
+#pw = 0.8 # Width of plot as fraction
+#yfac = w/h #y-scale factor
+#sfac = (ymx-ymn)/(xmx-xmn) #size scale factor
+#cmap = plt.cm.jet
+#fig = plt.figure(figsize=(w,h)) #Create Figure
+#ax = plt.axes([0.1,0.15,pw,pw*yfac*sfac],facecolor='White',frameon=True) # Create Axes
+#m = Basemap(projection='cyl',llcrnrlat=ymn,urcrnrlat=ymx,llcrnrlon=xmn,urcrnrlon=xmx,resolution='c') # Make Map
+#m.drawcoastlines() # draw coastlines
+#m.drawstates() # draw states
+#m.drawcountries()
+#m.drawcounties()
+#
+#sc = plt.scatter(lon, lat, c=pdat, s=30, cmap=cmap) #Plot points, can add vmin=0, vmax=500 to set the limits
+#plt.title('Yearly Precipitation Change (1950-2008)') # Add Title to the plot
+#
+#cax = fig.add_axes([0.1,0.1,0.8,0.015]) #Create Axes for Colorbar
+#bar = fig.colorbar(sc,orientation='horizontal',cax=cax) #Create Color bar
+#bar.set_label('Yearly Precipitation Change (inches)') # Add Label to Colorbar
+#
+#plt.savefig('Yearly Precipitation Change.pdf',format='pdf',bbox_inches='tight')   # Save the figure
+#
+#plt.show() #Show Figure
+```
+![](YearlyPrecipitationChange.jpg)
+![](YearlyTemperatureChange.jpg)
+
+![](Alaska.jpg)
+![](Hawaii.jpg)
+
+
+
+
+
+
