--- a/Final/Final.rmd
+++ b/Final/Final.rmd
@@ -29,7 +29,7 @@ library(knitr)
 ### I. Motivation
 The Madden - Julian Oscillation (MJO) is a large-scale circulation that is occasionally coupled with convection. The MJO propagates eastward at around 5 m/s and has an intraseasonal lifespan of 30 - 90 days. The MJO most often begins in the Indian Ocean and ends in the Western Pacific; however, location can vary immensely and is divided into eight phases. There are two modes of the MJO which are active and inactive. During the active mode, strong convection prevails and higher precipitation amounts are observed, while the inactive mode. To analyze the length of an active mode, indices are created to set a threshold of when the MJO is either mode [@Zhang2005].
 
-Comparing these indices to see how they do well with recognizing the active mode, as well as when an event is terminated is crucial for the study of the Madden-Julian Oscillation. The birth and decay of the MJO is still unknown and comparing indices could shine light on what precursor conditions allow for the MJO to maintain itself. As the MJO has widespread impacts on global climate, understanding this phenomena is important especially in regards to global climate models (GCMs).
+Comparing these indices to see how they do well with recognizing the active mode, as well as when an event is terminated is crucial for the study of the Madden-Julian Oscillation. There has been limited research on MJO termination and only with RMM values [@Stachnik2014]. The birth and decay of the MJO is still unknown and comparing indices could shine light on what precursor conditions allow for the MJO to maintain itself. As the MJO has widespread impacts on global climate, understanding this phenomena is important especially in regards to global climate models (GCMs).
 <br>
 
 ### II. Data and Analysis
